<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itp341.cammarano.colin.a6.Assignment6Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_game_name"
            android:id="@+id/text_game_name"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_riddle_color"
            android:id="@+id/text_riddle_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_riddle_size"
            android:id="@+id/text_riddle_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_riddle_name"
            android:id="@+id/text_riddle_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_room_color"
                    android:id="@+id/button_room_color"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_room_size"
                    android:id="@+id/button_room_size"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_room_name"
                    android:id="@+id/button_room_name"/>
            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_submit"
                android:id="@+id/button_submit"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
